--- a/seeql/media/diagramStyle.css
+++ b/seeql/media/diagramStyle.css
@@ -1,38 +1,18 @@
-body { 
-    font-family: Arial, sans-serif; 
-    background-color: #1e1e1e; 
-    color: #fff; 
-    padding: 20px; 
-}
-h1 {
-    text-align: center;
-    font-size: 24px;
-}
-.table { 
-    background-color: #2a2a2a; 
-    border: 1px solid #444; 
-    padding: 15px; 
-    margin-bottom: 20px; 
+.mermaid {
+    background-color: #1f1f1f;
+    padding: 20px;
     border-radius: 8px;
+    max-width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    transform: scale(1.5); /* Adjust the scale value as needed */
+    transform-origin: top left;
 }
-h2 { 
-    background-color: #555; 
-    color: #ddd; 
-    padding: 8px; 
-    text-transform: uppercase; 
-    font-weight: bold;
-    border-radius: 5px;
+
+.mermaid rect {
+    stroke: #000000 !important; /* Change node borders */
 }
-table { 
-    width: 100%; 
-    border-collapse: collapse; 
-    margin-top: 10px; 
-}
-th, td { 
-    border: 1px solid #555; 
-    padding: 8px; 
-    text-align: left; 
-}
-th { 
-    background-color: #444; 
+
+.mermaid .er .header {
+    fill: #ffffff !important
 }
